# bbi-sciatac-demux

./: README.md  create_virtual_envs.sh  experiment.config  load_pypy_env_reqs.sh  load_python_env_reqs.sh  main.nf  make_samplesheet_json.py  nextflow.config  pypy_requirements.txt  python_requirements.txt  run_info.py  setup_sciatac.py
nextflow/: .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  channel_01.nf
samplesheet/: check_sciatac_samplesheet.py  convert_samplesheet.py  make_samplesheet_json.py  plate_indices.py  samplesheet.test01.csv  samplesheet.test02.csv  samplesheet.test03.csv  samplesheet.test04.csv  samplesheet.test05.csv  samplesheet.test06.csv  samplesheet.test07.csv  samplesheet.test08.csv  samplesheet.test09.csv  samplesheet.test10.csv  sciatac_samplesheet.py  sciatac_samplesheet_example_01.csv  sciatac_samplesheet_example_02.csv  sciatac_samplesheet_example_03.csv  sciatac_samplesheet_example_04.csv  sciatac_samplesheet_example_05.csv  sciatac_samplesheet_example_06.csv  sciatac_samplesheet_example_07.csv  setup_samplesheet.py
scripts/: run.sciatac-demux.sh  run_merge.sh
src/: NOTES.20231208.txt  bam_to_bed.sh  barcode_constants.py  barcode_correct_sciatac.py  barcode_correct_sciatac.py.20200122  barcode_to_well.py  combine_matrices.R  demux_bed_bam_by_group.py  index_table_maker.py  json_extractor.py  log_distiller.py  (+10 more)
src/sciatac_find_hash_reads/: 00README  Cargo.toml
src/sciatac_find_hash_reads/src/: main.rs  run_dev.sh  run_release.sh
(+73 files in other folders)
